--- a/.eslintrc
+++ b/.eslintrc
@@ -8,22 +8,24 @@
   "globals": {
     "window": true,
     "document": true,
-    "undefined": true,
     "module": true,
     "define": true,
+    "undefined": true,
+    // project global name
+    "empty": true,
+    // jasmine reserved names
     "describe": true,
     "beforeEach": true,
     "afterEach": true,
     "expect": true,
-    "it": true,
-    // project global method
-    "empty": true
+    "spyOn": true,
+    "it": true
   },
 
   "rules": {
     "comma-dangle": 2,
     "no-cond-assign": 2,
-    "no-console": 1,
+    "no-console": 0,
     "no-constant-condition": 2,
     "no-dupe-keys": 0,
     "no-empty": 2,
@@ -36,11 +38,14 @@
     "no-negated-in-lhs": 2,
     "no-obj-calls": 2,
     "no-regex-spaces": 2,
-    "quote-props": 2,
+    "quote-props": [2, "as-needed"],
     "no-sparse-arrays": 2,
     "no-unreachable": 2,
     "use-isnan": 2,
-    "valid-jsdoc": 2,
+    "valid-jsdoc": [2, {
+            "requireParamDescription": false,
+            "requireReturnDescription": false
+        }],
     "valid-typeof": 2,
     "no-shadow-restricted-names": 0,
 
@@ -110,11 +115,13 @@
 
     ////////// Stylistic Issues //////////
 
+    "array-bracket-spacing": [2, "always"],
     "brace-style": 2,
+    "block-spacing": [2, "always"],
     "camelcase": 2,
     "comma-spacing": 2,
     "comma-style": 2,
-    "consistent-this": 2,
+    "consistent-this": [ 2, "v" ],
     "eol-last": 2,
     "func-style": 2,
     "key-spacing": 2,
@@ -131,16 +138,17 @@
     "semi-spacing": 2,
     "no-spaced-func": 2,
     "no-trailing-spaces": 2,
-    "no-underscore-dangle": 2,
+    "no-underscore-dangle": 0,
     "no-extra-parens": 2,
-    "one-var": 2,
+    "object-curly-spacing": [2, "always"],
+    "one-var": 0,
     "operator-assignment": 2,
     "quotes": [2, "single"],
     "semi": 2,
     "space-before-function-paren": 0,
     "space-after-keywords": 2,
     "space-before-blocks": 2,
-    "space-in-parens": [2, "never", { "exceptions": [ "()" ] }],
+    "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
     "space-return-throw-case": 2,
     "space-unary-ops": 2,
